--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Probably you are looking for [@UltiRequiem](https://github.com/UltiRequiem) or the [new web page](https://ultirequiem.github.io).
+<h1 id="probably-you-are-looking-for-ultirequiem-https-github-com-ultirequiem-or-the-new-web-page-https-ultirequiem-github-io-">Probably you are looking for <a href="https://github.com/UltiRequiem">@UltiRequiem</a> or the <a href="https://ultirequiem.github.io">new web page</a>.</h1>
